# audio-net

./: README.md  partitions.csv  sdkconfig
.github/workflows/: codeql.yml
components/audio_hal/: CMakeLists.txt  component.mk
components/audio_hal/include/: audio_hal.h
components/audio_pipeline/: audio_element.c  ringbuf.c
components/audio_pipeline/include/: audio_element.h
components/audio_sal/: audio_mem.c
components/audio_sal/include/: audio_mem.h
components/lib/: CMakeLists.txt
components/lib/button/: button.c
components/lib/console/: console.c  console.h
components/monitor/: CMakeLists.txt  monitor.c
components/monitor/include/: monitor.h
components/my_board/: CMakeLists.txt  component.mk
components/my_board/my_board_v1_0/: board.c  board.h  board_def.h  board_pins_config.c
components/my_board/my_codec_driver/: new_codec.c  new_codec.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
main/: CMakeLists.txt  audio_dispatch.c  audio_dispatch.h  audio_types.h  bt_app_av.c  bt_app_core.c  bt_app_core.h  bt_reader.c  button_io.c  button_io.h  file_reader.c  file_reader.h  file_writer.c  file_writer.h  i2s_reader.c  i2s_reader.h  i2s_writer.c  i2s_writer.h  loop_state.h  main.c
